--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
+    "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "expo": "~51.0.28",
