--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "@gluestack-ui/themed": "^1.1.34",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
-    "@react-navigation/native-stack": "^7.0.4",
+    "@react-navigation/native-stack": "^6.10.1",
     "expo": "~51.0.28",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.460.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-file-system": "~17.0.1"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
