--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
+    "@hookform/resolvers": "^3.9.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^6.10.1",
@@ -28,7 +29,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
