--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^6.10.1",
+    "axios": "^1.7.9",
     "expo": "~51.0.28",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
