--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^2.9.8",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.7",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^6.10.1",
@@ -25,14 +26,13 @@
     "expo-status-bar": "~1.12.1",
     "lucide-react-native": "^0.460.0",
     "react": "18.2.0",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.36.1",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "yup": "^1.4.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
